--- a/main.html
+++ b/main.html
@@ -5,14 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
+  <style>
+    .zoom{
+      transition: transform .2s; /* Animation */
+    }
+    .zoom:hover {
+      transform: scale(1.05); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    }
+  </style>
 </head>
 <body>
-    
+    <header class="d-flex justify-content-center m-2 p-2">
+      <h2>Cards Gallery</h2>
+    </header>
     <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
+        <div class="col zoom">
           <div class="card">
             <a href="#newton-modal" data-bs-toggle="modal" data-bs-target="#newton-modal">
-              <img src="https://images.unsplash.com/photo-1706711625046-93890d38c630?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzM3x8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="..." width="300px" height="200px">
+              <img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" class="card-img-top" alt="..." width="300px" height="200px">
             </a>
             <div class="card-body">
               <h5 class="card-title text-center">Card title</h5>
@@ -21,10 +31,49 @@
           </div>
         </div>
         <!-- Repeat the above structure for other cards -->
-        <div class="col">
+        <div class="col zoom">
             <div class="card">
               <a href="#newton-modal2" data-bs-toggle="modal" data-bs-target="#newton-modal2">
-                <img src="https://images.unsplash.com/photo-1519046904884-53103b34b206?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGJlYWNofGVufDB8fDB8fHww" class="card-img-top" alt="..." width="300px" height="200px">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" class="card-img-top" alt="..." width="300px" height="200px">
+              </a>
+              <div class="card-body">
+                <h5 class="card-title text-center">Card title</h5>
+                <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <!-- Repeat the above structure for other cards -->
+          <!-- Repeat the above structure for other cards -->
+        <div class="col zoom">
+            <div class="card">
+              <a href="#newton-modal2" data-bs-toggle="modal" data-bs-target="#newton-modal2">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" class="card-img-top" alt="..." width="300px" height="200px">
+              </a>
+              <div class="card-body">
+                <h5 class="card-title text-center">Card title</h5>
+                <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <!-- Repeat the above structure for other cards -->
+          <!-- Repeat the above structure for other cards -->
+        <div class="col zoom">
+            <div class="card">
+              <a href="#newton-modal2" data-bs-toggle="modal" data-bs-target="#newton-modal2">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" class="card-img-top" alt="..." width="300px" height="200px">
+              </a>
+              <div class="card-body">
+                <h5 class="card-title text-center">Card title</h5>
+                <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <!-- Repeat the above structure for other cards -->
+          <!-- Repeat the above structure for other cards -->
+        <div class="col zoom">
+            <div class="card">
+              <a href="#newton-modal2" data-bs-toggle="modal" data-bs-target="#newton-modal2">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" class="card-img-top" alt="..." width="300px" height="200px">
               </a>
               <div class="card-body">
                 <h5 class="card-title text-center">Card title</h5>
@@ -35,9 +84,9 @@
           <!-- Repeat the above structure for other cards -->
           <!-- Repeat the above structure for other cards -->
         <div class="col">
-            <div class="card">
+            <div class="card zoom">
               <a href="#newton-modal2" data-bs-toggle="modal" data-bs-target="#newton-modal2">
-                <img src="https://images.unsplash.com/photo-1473496169904-658ba7c44d8a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjd8fGJlYWNofGVufDB8fDB8fHww" class="card-img-top" alt="..." width="300px" height="200px">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" class="card-img-top" alt="..." width="300px" height="200px">
               </a>
               <div class="card-body">
                 <h5 class="card-title text-center">Card title</h5>
@@ -46,11 +95,11 @@
             </div>
           </div>
           <!-- Repeat the above structure for other cards -->
-          <!-- Repeat the above structure for other cards -->
-        <div class="col">
+            <!-- Repeat the above structure for other cards -->
+        <div class="col zoom">
             <div class="card">
               <a href="#newton-modal2" data-bs-toggle="modal" data-bs-target="#newton-modal2">
-                <img src="https://images.unsplash.com/photo-1519692933481-e162a57d6721?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmFpbnxlbnwwfHwwfHx8MA%3D%3D" class="card-img-top" alt="..." width="300px" height="200px">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image7.jpg" class="card-img-top" alt="..." width="300px" height="200px">
               </a>
               <div class="card-body">
                 <h5 class="card-title text-center">Card title</h5>
@@ -59,11 +108,11 @@
             </div>
           </div>
           <!-- Repeat the above structure for other cards -->
-          <!-- Repeat the above structure for other cards -->
-        <div class="col">
+            <!-- Repeat the above structure for other cards -->
+        <div class="col zoom">
             <div class="card">
               <a href="#newton-modal2" data-bs-toggle="modal" data-bs-target="#newton-modal2">
-                <img src="https://plus.unsplash.com/premium_photo-1664367985837-923430cfb913?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8ZmlyZXxlbnwwfHwwfHx8MA%3D%3D" class="card-img-top" alt="..." width="300px" height="200px">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image8.jpg" class="card-img-top" alt="..." width="300px" height="200px">
               </a>
               <div class="card-body">
                 <h5 class="card-title text-center">Card title</h5>
@@ -72,11 +121,11 @@
             </div>
           </div>
           <!-- Repeat the above structure for other cards -->
-          <!-- Repeat the above structure for other cards -->
-        <div class="col">
+            <!-- Repeat the above structure for other cards -->
+        <div class="col zoom">
             <div class="card">
               <a href="#newton-modal2" data-bs-toggle="modal" data-bs-target="#newton-modal2">
-                <img src="https://images.unsplash.com/photo-1561037404-61cd46aa615b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8ZG9nfGVufDB8fDB8fHww" class="card-img-top" alt="..." width="300px" height="200px">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image9.jpg" class="card-img-top" alt="..." width="300px" height="200px">
               </a>
               <div class="card-body">
                 <h5 class="card-title text-center">Card title</h5>
